--- a/config/database.yml
+++ b/config/database.yml
@@ -15,6 +15,12 @@ development:
   database: flashcard_db
   pool: 5
 
+test:
+  adapter: postgresql
+  encoding: unicode
+  database: test_flashcard_db
+  pool: 5
+
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
