--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,12 @@ language: ruby
 rvm:
   - 2.3.1
 env:
- +  - DB=postgres
- +
- +before_script:
- +  - "cp config/database.ci.yml config/database.yml"
- +  - "bundle exec rake db:drop"
- +  - "RAILS_ENV=test bundle exec rake db:drop"
- +  - "RAILS_ENV=test bundle exec rake db:create"
- +  - "RAILS_ENV=test bundle exec rake db:schema:load"
- +script: "RAILS_ENV=test bundle exec rake spec"
+   - DB=postgres
+
+ before_script:
+   - "cp config/database.ci.yml config/database.yml"
+   - "bundle exec rake db:drop"
+   - "RAILS_ENV=test bundle exec rake db:drop"
+   - "RAILS_ENV=test bundle exec rake db:create"
+   - "RAILS_ENV=test bundle exec rake db:schema:load"
+ script: "RAILS_ENV=test bundle exec rake spec"
