--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -1,5 +1,5 @@
 default: &default
-  sorcery_github_callback_url: http://0.0.0.0:3000/oauth/callback?provider=github
+  sorcery_github_callback_url: <%= ENV["SORCERY_GITHUB_CALLBACK_URL"] %>
   sorcery_github_key: <%= ENV["SORCERY_GITHUB_KEY"] %>
   sorcery_github_secret: <%= ENV["SORCERY_GITHUB_SECRET"] %>
 
